--- a/application/views/admin_home.html
+++ b/application/views/admin_home.html
@@ -10,6 +10,22 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    <style>
+
+    	h3{
+        text-shadow: 0px 0px 3px rgba(0, 0, 0, 1);
+      }
+      
+    	a {
+    		color:#F3F781;
+    		text-decoration: none;
+    	}
+    	a:hover,
+		a:focus {
+		  color: #FFFFFF;
+		  text-decoration: underline;
+		}
+    </style>
   </head>
 
   <body>
@@ -35,30 +51,7 @@
 	</div><!-- headerwrap -->
 
 
-	<div class="container w">
-		<div class="row centered">
-			<br><br>
-			<div class="col-lg-4">
-				<i class="fa fa-heart"></i>
-				<h4>DESIGN</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
-			</div><!-- col-lg-4 -->
-
-			<div class="col-lg-4">
-				<!-- <i class="fa fa-laptop"></i> -->
-				<?php echo img("assets/img/frappe_logo-small.gif");?>
-				<h4>Frappe & Co,.</h4>
-			</div><!-- col-lg-4 -->
-
-			<div class="col-lg-4">
-				<i class="fa fa-trophy"></i>
-				<h4>SUPPORT</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
-			</div><!-- col-lg-4 -->
-		</div><!-- row -->
-		<br>
-		<br>
-	</div><!-- container -->
+	
 	
 
     <!-- Bootstrap core JavaScript
