--- a/application/views/buyer_home.html
+++ b/application/views/buyer_home.html
@@ -8,6 +8,17 @@
       h3{
         text-shadow: 0px 0px 3px rgba(0, 0, 0, 1);
       }
+      
+      a {
+        color:#F3F781;
+        text-decoration: none;
+      }
+      a:hover,
+    a:focus {
+      color: #2a6496;
+      text-decoration: underline;
+    }
+  
     </style>
   </head>
 
@@ -24,21 +35,21 @@
             </script>
             ';
           ?>
-  <div id="myheaderwrap">
-    <div class="container" >
+  
+	<div id="headerwrap">
+    <div class="container">
       <div class="row centered">
-        <div class="col-lg-8 col-lg-offset-2" style="height:100%">
+        <div class="col-lg-8 col-lg-offset-2">
         <h1>- Customer -</h1>
         <h3><a href="product_c" class=""><b>> Product <</b></a></h3>
         <h3><a href="home_c/cart" class=""><b>> My Cart <</b></a></h3>
         <h3><a href="home_c/watchlist" class=""><b>> Watch List <</b></a></h3>
         <h3><a href="home_c/message" class=""><b>> Messages Box <</b></a></h3>
         <h3><a href="home_c/history" class=""><b>> History <</b></a></h3>
-        </div> 
+        </div>
       </div><!-- row -->
     </div><!-- container -->
   </div><!-- headerwrap -->
-	
 	
 
     <!-- Bootstrap core JavaScript
