--- a/application/views/admin_menu.html
+++ b/application/views/admin_menu.html
@@ -14,8 +14,7 @@
 
 		            <li><a href=<?php echo site_url("home_c"); ?>>HOME</a></li>
 		            <li><a href=<?php echo site_url("home_c/product"); ?>>PRODUCT</a></li>
-		            <li><a href=<?php echo site_url("home_c/message"); ?>>MSG BOX</a></li>
-		            <li><a href=<?php echo site_url("home_c/report"); ?>>REPORT</a></li>
+		            <li><a href=<?php echo site_url("home_c/message"); ?>>USER COMPLAINT</a></li>
 		            <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
 		          	<li><a href=<?php echo site_url("home_c/logout"); ?>>SIGN OUT</a></li>
 		          	<li><a href=<?php echo site_url("member_c/memberDetail/".$username);?>>| <?php echo " ".$username." ";?> |</a></li>
