--- a/application/views/problemForm.html
+++ b/application/views/problemForm.html
@@ -75,7 +75,7 @@
                   <div class="col-lg-2">
                   </div>
                   <div class="col-lg-10">
-                    <button type="button" class="btn btn-danger">Report</button>
+                    <button type="submit" class="btn btn-danger">Report</button>
                   <a href="home_c"><button type="button" class="btn btn-default" >Cancel</button></a>
                   </div>
                 </div>
