--- a/application/views/problemForm.html
+++ b/application/views/problemForm.html
@@ -97,9 +97,8 @@
   <script src=<?php echo base_url("assets/js/validation_function.js");?> ></script>
   <script>
     function validateForm() {
-      var subject = document.forms["message-form"]["msgSubject"].value;
-      var text = document.forms["message-form"]["msgText"].value;
-
+      var subject = document.forms["problem-form"]["msgSubject"].value;
+      var text = document.forms["problem-form"]["msgText"].value;
       var message ="";
 
       if (!validateSubject(subject)||subject==""||subject==null) {
