--- a/application/views/seller_home.html
+++ b/application/views/seller_home.html
@@ -10,30 +10,47 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    <style>
+
+    	h3{
+        text-shadow: 0px 0px 3px rgba(0, 0, 0, 1);
+      }
+      
+    	a {
+    		color:#F3F781;
+    		text-decoration: none;
+    	}
+    	a:hover,
+		a:focus {
+		  color: #FFFFFF;
+		  text-decoration: underline;
+		}
+    </style>
   </head>
 
   <body>
 
     <!-- Fixed navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="home_c">DUMB<i class="fa fa-circle"></i>BAY</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-          <?php
-            include 'seller_menu.html'
-          ?>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+  <?php
+      if($type==0){
+        include 'guest_menu.html';
+      }
+      else if($type==1){
+        include 'admin_menu.html';  
+      }            
+      else if($type==2){
+        include 'buyer_menu.html';  
+      }
+      else if($type==3){
+        include 'seller_menu.html'; 
+      }
+      if($this->session->flashdata('message')) echo '
+    <script>
+      alert("'.$this->session->flashdata('message').'");
+    </script>
+    ';
+    ?>
+
 
 	<div id="headerwrap">
 		<div class="container">
@@ -48,37 +65,6 @@
 			</div><!-- row -->
 		</div><!-- container -->
 	</div><!-- headerwrap -->
-
-
-	<div class="container w">
-		<div class="row centered">
-			<br><br>
-			<div class="col-lg-4">
-				<i class="fa fa-heart"></i>
-				<h4>DESIGN</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
-			</div><!-- col-lg-4 -->
-
-			<div class="col-lg-4">
-				<!-- <i class="fa fa-laptop"></i> -->
-				<img src="assets/img/frappe_logo-small.gif">
-				<h4>Frappe & Co,.</h4>
-			</div><!-- col-lg-4 -->
-
-			<div class="col-lg-4">
-				<i class="fa fa-trophy"></i>
-				<h4>SUPPORT</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
-			</div><!-- col-lg-4 -->
-		</div><!-- row -->
-		<br>
-		<br>
-	</div><!-- container -->
-	
-
-
-	
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
