--- a/application/views/replyMessage.html
+++ b/application/views/replyMessage.html
@@ -42,7 +42,7 @@
             <div class="container w ">
               <div class="container">
                 <div class="row centered">              
-                  <legend><h1>Message Box</h1></legend>
+                  <legend><h1><?php if($type==2||$type==3) echo 'Message Box'; else echo 'User Complaint Box'; ?></h1></legend>
                 </div>
               </div><!-- row -->
             </div><!-- container -->
