--- a/application/views/history.html
+++ b/application/views/history.html
@@ -115,6 +115,14 @@
                       echo '</div>';
                     echo '</div>';
                   echo '</div>';
+                  if($row->status=="paid" || $row->status=="shipped"){
+                    echo '<div class="row">';
+                    echo '<br>';
+                    echo'<div class="col-md-5">';
+                    echo'<button class="btn bnt-default">Review</button>';
+                    echo'</div>';
+                    echo'</div>';
+                  }
                 echo '</div>';
               echo '</div>';
             echo '</li>';
