--- a/application/views/history.html
+++ b/application/views/history.html
@@ -115,7 +115,7 @@
                       echo '</div>';
                     echo '</div>';
                   echo '</div>';
-                  if($row->status=="paid" || $row->status=="shipped"){
+                  if($row->status=="Paid" || $row->status=="Shipped"){
                     echo '<div class="row">';
                     echo '<br>';
                     echo'<div class="col-md-5">';
