--- a/application/views/history.html
+++ b/application/views/history.html
@@ -70,7 +70,7 @@
 
         ?>
         <!--for each=========================================================================================================-->
-        <div class="col-md-10 col-md-offset-1 border-shadow border-radius" style="background-color:white">
+        <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
           <ol style="list-style-type:none; padding-left: 0px">
 
             <?php
