--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -64,8 +64,8 @@ include 'HTMLHeader.html';
                   </div>
                 </div>
               </div>
-              
-              <div class="col-md-10 col-md-offset-1 border-shadow border-radius" style="background-color:white">
+
+              <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
                 <ol style="list-style-type:none; padding-left: 0px">
                   <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
                     <div class="row">
@@ -105,13 +105,13 @@ include 'HTMLHeader.html';
                             <button type="button" class="btn btn-default">Bid</button>
                           </div>
                           <div class="col-md-10">
-                            
+
                             <div class="row">
                               <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-4">Max bid:</label>
 
                               <div class="form-group col-md-7" style="left:0%; padding-right:0px">
                                 <div class="input-group">
-                                  
+
                                   <input type="text" class="form-control"  placeholder="Enter max bid">
                                   <span class="input-group-btn">
                                     <button class="btn btn-default" type="button">Bid</button>
@@ -151,13 +151,13 @@ include 'HTMLHeader.html';
                           <button type="button" class="btn btn-default">Bid</button>
                         </div>
                         <div class="col-md-10">
-                          
+
                           <div class="row">
                             <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-4">Max bid:</label>
 
                             <div class="form-group col-md-7" style="left:0%; padding-right:0px">
                               <div class="input-group">
-                                
+
                                 <input type="text" class="form-control"  placeholder="Enter max bid">
                                 <span class="input-group-btn">
                                   <button class="btn btn-default" type="button">Bid</button>
@@ -172,7 +172,7 @@ include 'HTMLHeader.html';
                     </div>
                   </div>
                 </li>
-                
+
               </ol>
             </div>
           </div><!-- row -->
@@ -180,8 +180,8 @@ include 'HTMLHeader.html';
       </div><!-- headerwrap -->
 
 
-      
-      
+
+
       <!-- FOOTER -->
       <div id="f" style="margin-top:50px">
         <div class="container">
@@ -197,7 +197,7 @@ include 'HTMLHeader.html';
       </div><!-- Footer -->
 
 
-      
+
 
 
     <!-- Bootstrap core JavaScript
