--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -96,13 +96,13 @@ include 'HTMLHeader.html';
                       <div class="col-md-5">
                         <div class="row" style="padding-top:10px">
                           <div class="col-md-12">
-                            <strong>current bid: </strong>'.$row->Current_Price.'<br><strong>time left: </strong>18 hr**<br><strong>bidding: </strong>manual<br><strong>your max bid: </strong>-
+                            <strong>current bid: </strong>'.$row->Current_Price.'<br><strong>time left: </strong>18 hr**<br><strong>bidding: </strong>manual<br><strong>your max bid: </strong>'.$row->Bid_Price.'
                           </div>
                         </div>
                         <div class="row">
                           <br>
                           <div class="col-md-2">
-                            <button type="button" class="btn btn-default">Bid</button>
+                            <a href="watchlist_c/stepBidding/'.$row->Product_ID.'"><button type="button" class="btn btn-default">Bid</button></a>
                           </div>
                           <div class="col-md-10">
 
@@ -111,11 +111,12 @@ include 'HTMLHeader.html';
 
                               <div class="form-group col-md-7" style="left:0%; padding-right:0px">
                                 <div class="input-group">
-
-                                  <input type="text" class="form-control"  placeholder="Enter max bid">
+                                '.form_open('bidding_c/maxBidding/'.$row->Product_ID,'id="maxbid-form" name="maxbid-form" onsubmit="return validateForm()"').'
+                                  <input type="text" class="form-control" name="maxbid"  placeholder="Enter max bid">
                                   <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button">Bid</button>
+                                    <button class="btn btn-default" type="submit">Bid</button>
                                   </span>
+                                  </form>
                                 </div>
                               </div>
 
@@ -179,31 +180,29 @@ include 'HTMLHeader.html';
         </div><!-- container -->
       </div><!-- headerwrap -->
 
-
-
-
-      <!-- FOOTER -->
-      <div id="f" style="margin-top:50px">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 col-md-push-2">
-              <img src="assets/img/DumboBay-Logo-b.png">
-            </div>
-            <div class="col-md-6 col-md-push-2">
-              <img src="assets/img/Frappe-Logo-bg-sm.png">
-            </div>
-          </div><!-- row -->
-        </div><!-- container -->
-      </div><!-- Footer -->
-
-
-
-
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <script src=<?php echo base_url("assets/js/validation_function.js");?> ></script>
+  <script>
+    function validateForm() {
+      var subject = document.forms["problem-form"]["msgSubject"].value;
+      var text = document.forms["problem-form"]["msgText"].value;
+      var message ="";
+
+      if (!validateSubject(subject)||subject==""||subject==null) {
+        alert("The subject is invalid.");
+        return false;
+      }
+      if (!validateMessageText(text)||text==""||text==null ) {
+        alert("Text is invalid.");
+        return false;
+      }
+  }
+  </script>
   </body>
   </html>
