--- a/application/views/paymentForm.html
+++ b/application/views/paymentForm.html
@@ -84,19 +84,13 @@
 					</div>
 				</div>
 				<?php echo validation_errors(); ?>
-				<?php echo form_open('payment_c/pay/'.$price); ?>
+				<?php echo form_open('payment_c/pay/'.$price,'class="form-horizontal" id="payment-form" name="payment-form" onsubmit="return validateForm()"'); ?>
 					<div class="row">
 						<div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white;padding-top:20px;margin-bottom:25px">
 							<div class="row form-group">
 								<label class="col-md-3 control-label" align="right">VISA No.</label>
 								<div class="col-md-9">
 									<input type="text" class="form-control" id="visano" name="visano" autofocus>
-								</div>
-							</div>
-							<div class="row form-group">
-								<label class="col-md-3 control-label" align="right">Password</label>
-								<div class="col-md-9">
-									<input type="password" class="form-control" id="visapw" name="visapw">
 								</div>
 							</div>
 							<div class="row form-group">
@@ -136,6 +130,27 @@
 	<script src="assets/js/bootstrap.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+	<script src=<?php echo base_url("assets/js/validation_function.js");?> ></script>
+	  <script>
+	    function validateForm() {
+	      var visano = document.forms["payment-form"]["visano"].value;
+	      var sendaddress = document.forms["payment-form"]["sendaddress"].value;
+	      var expireddate = document.forms["payment-form"]["expireddate"].value;
+	      var message ="";
 
+	      if (!validateVisaID(visano)||visano==""||visano==null ) {
+	        alert("VISA No. is invalid.");
+	        return false;
+	      }
+	      if (!validateAddress(sendaddress)||sendaddress==""||sendaddress==null) {
+	        alert("Send address is invalid.");
+	        return false;
+	      }
+	      if (!validateExpiredDate(expireddate)||expireddate==""||expireddate==null ) {
+	        alert("Expired Date is invalid.");
+	        return false;
+	      }
+	  }
+	  </script>
 </body>
 </html>
