--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -104,7 +104,7 @@ include 'HTMLHeader.html';
                       <div class="col-md-5">
                         <div class="row" style="padding-top:10px">
                           <div class="col-md-12">
-                            <strong>Current bid: </strong>'.$row->Current_Price.'<br><strong>Yime left: </strong>18 hr**<br><strong>Your bidding type: </strong>'.$row->Bid_Type.'<br><strong>Your max bid: </strong>'.$maxbid.'
+                            <strong>Current bid: </strong>'.$row->Current_Price.'<br><strong>Time left: </strong>18 hr**<br><strong>Your bidding type: </strong>'.$row->Bid_Type.'<br><strong>Your max bid: </strong>'.$maxbid.'
                           </div>
                         </div>
                         <div class="row">
@@ -119,8 +119,8 @@ include 'HTMLHeader.html';
 
                               <div class="form-group col-md-7" style="left:0%; padding-right:0px">
                                 <div class="input-group">';
-                                echo form_open('bidding_c/maxBidding/'.$row->Product_ID,'class="form-horizontal" id="maxbid-form" name="maxbid-form" onsubmit="return validateForm()"');
-                                 echo '<input type="text" class="form-control" id="maxbid" name="maxbid"  placeholder="Enter max bid">
+                                echo form_open('bidding_c/maxBidding/'.$row->Product_ID,'id="maxbid-form" name="maxbid-form" onsubmit="return validateForm()"');
+                                 echo '<input type="text" class="form-control" id="maxbid" name="maxbid" placeholder="Enter max bid">
                                   <span class="input-group-btn">
                                     <button class="btn btn-default" type="submit">Bid</button>
                                   </span>
