--- a/application/views/product.html
+++ b/application/views/product.html
@@ -151,7 +151,7 @@
 										echo "</div>";
 										echo "<div class=\"col-lg-4 centered auctionbutton\">";
 											echo "<p>Time left: 0:02:07</p>";
-											echo "<a data-toggle=\"modal\" data-target=\"#bidform\" href=\"#bidform".$row->Product_ID."/1\"><button type=\"button\" class=\"btn btn-default\">Add to Watch List</button></a>";
+											echo "<a data-toggle=\"modal\" data-target=\"#bidform\" href=\"/".$row->Product_ID."/1\"><button type=\"button\" class=\"btn btn-default\">Add to Watch List</button></a>";
 										echo "</div>";
 									echo "</div>";
 									//}
