--- a/application/views/test_time.html
+++ b/application/views/test_time.html
@@ -76,7 +76,7 @@
       var yy = diff.getUTCFullYear()-1970;
       var mm = diff.getUTCMonth();
       var dd = diff.getUTCDate()-1;      
-      var hh = diff.getUTCHours();    
+      var hh = diff.getUTCHours()-7;    
       var min = diff.getUTCMinutes();
       var sec = diff.getUTCSeconds();
       //var dd = diff.getDate();
