--- a/application/views/index.html
+++ b/application/views/index.html
@@ -4,6 +4,21 @@
 	<?php
 		include 'HTMLHeader.html';
 	?>
+	<style>
+	h3{
+        text-shadow: 0px 0px 3px rgba(0, 0, 0, 1);
+      }
+      
+      a {
+        color:#F3F781;
+        text-decoration: none;
+      }
+      a:hover,
+    a:focus {
+      color: #2a6496;
+      text-decoration: underline;
+    }
+    </style>
 </head>
 <body>
 	<!-- Fixed navbar -->
@@ -17,7 +32,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<h1>Just let me <b>Shop</b> <br>and no one gets hurt.</h1>
 					<h2>- DumboBay -</h2>
-					<h2><a href="home_c/product" class="link-product"><b>> Products <</b></a></h2>
+					<h2><a href="home_c/product"><b>> Products <</b></a></h2>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
