--- a/application/views/buyer_home.html
+++ b/application/views/buyer_home.html
@@ -5,9 +5,6 @@
       include 'HTMLHeader.html';
     ?>
     <style>
-      h3{
-        text-shadow: 0px 0px 3px rgba(0, 0, 0, 1);
-      }
       
       a {
         color:#F3F781;
@@ -40,7 +37,7 @@
     <div class="container">
       <div class="row centered">
         <div class="col-lg-8 col-lg-offset-2">
-        <h1>- Customer -</h1>
+        <h1 style="margin-top:50px">Welcome!</h1><br><h1 style="margin-top:-20px;margin-bottom:40px;font-size:40px">You are our customer.</h1>
         <h3><a href="product_c" class=""><b>> Product <</b></a></h3>
         <h3><a href="home_c/cart" class=""><b>> My Cart <</b></a></h3>
         <h3><a href="home_c/watchlist" class=""><b>> Watch List <</b></a></h3>
