--- a/application/views/messageBox.html
+++ b/application/views/messageBox.html
@@ -38,6 +38,15 @@
     </script>
     ';
     ?>
+    <!-- =======================================================================-->
+    <div id="myheaderwrap">
+      <div class="container">
+        <div class="row centered">
+          <h2>We need to <b>Talk</b> and no one gets hurt. <b>-DumboBay-</b></h3>  
+        </div><!-- row -->
+      </div><!-- container -->
+    </div><!-- headerwrap -->
+    <!-- ======================================================================= -->  
       <div>
         <div class="container w ">
           <div class="container">
