--- a/application/views/problemForm.html
+++ b/application/views/problemForm.html
@@ -37,7 +37,15 @@
     </script>
     ';
     ?>
-
+    <!-- =======================================================================-->
+    <div id="myheaderwrap">
+      <div class="container">
+        <div class="row centered">
+          <h2>We need to <b>Talk</b> and no one gets hurt. <b>-DumboBay-</b></h3>  
+        </div><!-- row -->
+      </div><!-- container -->
+    </div><!-- headerwrap -->
+    <!-- ======================================================================= -->  
       <!-- msg part-->
       <div>
         <div class="container">
