--- a/application/views/product.html
+++ b/application/views/product.html
@@ -36,10 +36,10 @@
     ';
     ?>
 	<!-- =======================================================================-->
-	<div id="myheaderwrap">
-		<div class="container">
-			<div class="row centered">
-				<h2>Just let me <b>Shop</b> and no one gets hurt. <b>-DumboBay-</b></h3>	
+		<div id="myheaderwrap">
+			<div class="container">
+				<div class="row centered">
+					<h2>Just let me <b>Shop</b> and no one gets hurt. <b>-DumboBay-</b></h3>	
 				</div><!-- row -->
 			</div><!-- container -->
 		</div><!-- headerwrap -->
@@ -50,39 +50,31 @@
 
 			<div class="container w">
 				<div class="container">
-					<div class="row">
-						<!--<img src="assets/img/products.png" id="back" style="cursor:pointer">-->
-						<div class="col-lg-6 col-lg-push-4">
-							
-						</div>
-						<div class="col-lg-6" style="margin-top:20px;margin-left:-5%">
-							<h1>Products</h1>
-						</div>
+					<div class="row centered">
+						<h1>Products</h1>
 					</div><!-- row -->
 				</div><!-- container -->
 			</div>
 			<div class="container desc">
-				<div class="border-radius" style="background-color:white">
-				<!--<div class="row">
-					<h2 class="col-lg-6" align="center">Direct Sale</h2>
-					<h2 class="col-lg-6" align="center">Auction</h2>
-				</div>-->
 
-				<div class="row">
-
-					<form class="form-horizontal" id="search-form" name="search-form" action="product_c/search" method="post">
-						<div class="row">
-							<div class="col-lg-11">
-								<input type="text" class="form-control" id="inputDirectSaleSearch" name="search">
+				<div class="border-radius" style="background-color:white;margin-bottom:20px">
+					<form class="form-horizontal row" id="search-form" name="search-form" action=<?php echo site_url('product_c/search') ?> method="post" style="padding-top:20px;"  onsubmit="return validateForm()">
+							<div class="col-lg-3">
+								
+							</div>
+							<div class="col-lg-5">
+								<input type="text" class="form-control" id="search" name="search">
 							</div>
 							<div class="col-lg-1">
 								<button type="submit" value="submit" class="btn btn-default">Search</button>
+							</div> 
+							<div class="col-lg-2">
+								<a href=<?php echo site_url('product_c') ?>><button type="button" value="submit" class="btn btn-default">All Products</button></a>
 							</div>
-						</div>
 					</form>
-
+					<hr>
 					<!-- DIRECT SALE ================================================ -->
-					<div class="col-lg-6 border-left-radius" style="background-color:white">
+					<div class="col-lg-6 border-left-radius" style="background-color:white; margin-bottom:20px">
 						<h2 align="center">Direct Sale</h2>
 						<br>
 						<!-- SEARCH DIRECT SALE-->
@@ -166,7 +158,7 @@
 
 
 				</div><!-- row -->
-				</div>
+		
 			</div><!-- container -->
 		</div>
 		<!--end PRODUCT-->
@@ -216,7 +208,7 @@
 <!-- -->
 	<script>
 	function validateForm() {
-	    var search = document.forms["search-form"]["inputDirectSaleSearch"].value;
+	    var search = document.forms["search-form"]["search"].value;
 
 	    if (search==null || search=="" ) {
 	    	alert("Please put a keyword in the search area.");
