--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -52,33 +52,28 @@ include 'HTMLHeader.html';
             <div class="container">
              <div>
               <div class="col-md-10 col-md-offset-1" style="padding-top:50px; padding-bottom:25px">
-                <div class="row">
-                  <div class="col-md-2" style="padding-left:20px">
-                    <img src="assets/img/watchlist.png" width="130" height="100">
-                  </div>
-                  <div class="col-md-8">
-                    <h1 style="color:black;padding-top:13px">Watchlist</h1>
-                  </div>
-                  <div class="col-md-2" style="padding-top:70px;padding-left:70px"> 
-                    item: 4
-                  </div>
+                <div class="row centered">
+                   <h1>Watchlist</h1>
                 </div>
               </div>
 
               <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
                 <ol style="list-style-type:none; padding-left: 0px">
                   <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
-                    <div class="row">
-                      <div class="col-md-6">
-                      </div>
-                      <div class="col-md-5">
-                        <input type="text" class="form-control" id="inputDirectSaleSearch" placeholder="Search...">
-                      </div>
-
-                      <div class="col-md-1" style="padding-left:0px">
-                        <button type="button" class="btn btn-default">Search</button>
-                      </div>
-                    </div>
+                    <form class="form-horizontal row" id="search-form" name="search-form" action="product_c/search" method="post" style="padding-top:20px;">
+                        <div class="col-lg-3">
+                          
+                        </div>
+                        <div class="col-lg-5">
+                          <input type="text" class="form-control" id="inputDirectSaleSearch" name="inputDirectSaleSearch" placeholder="Search...">
+                        </div>
+                        <div class="col-lg-1">
+                          <button type="submit" value="submit" class="btn btn-default">Search</button>
+                        </div> 
+                        <div class="col-lg-2">
+                          
+                        </div>
+                    </form>
                   </li>
                   <?php 
                   foreach ($products->result() as $row){
@@ -89,7 +84,7 @@ include 'HTMLHeader.html';
 
                     if($row->Current_Max_Bid!=$row->Bid_Price) $maxbid='-';
                     else $maxbid = $row->Current_Max_Bid;
-
+                    // echo $row->Product_ID;
                     echo '<li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
                     <div class="row">
                       <div class="col-md-3">
